setting_files/sonarqube.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: 2018-08-04T09:37:32Z
  labels:
    app: sonarqube
  name: sonarqube
  namespace: 3890-sonarqube
  resourceVersion: "29283119"
  selfLink: /apis/route.openshift.io/v1/namespaces/3890-sonarqube/routes/sonarqube
  uid: 031dc56f-97ca-11e8-9a19-0220bffb280e
spec:
  host: sonarqube-3890-sonarqube.apps.na39.openshift.opentlc.com
  port:
    targetPort: 9000-tcp
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-08-04T09:37:32Z
      status: "True"
      type: Admitted
    host: sonarqube-3890-sonarqube.apps.na39.openshift.opentlc.com
    routerName: router
    wildcardPolicy: None
